--- a/styles/components/_shoping-cart.scss
+++ b/styles/components/_shoping-cart.scss
@@ -91,6 +91,10 @@
             font-weight: bold;
         }
     }
+    &__delete-icon {
+       stroke: #222222;
+       opacity: 0.6;
+    }
 }
 
 @media screen and (max-width: 1100px) {
