--- a/styles/main.scss
+++ b/styles/main.scss
@@ -90,5 +90,9 @@
 
 // shoping cart
 
-@import "../styles/components/shoping-cart"
+@import "../styles/components/shoping-cart";
+
+// contacts page
+
+@import "../styles/components/contacts";
 
