--- a/styles/main.css
+++ b/styles/main.css
@@ -8581,4 +8581,216 @@ input {
     padding: 0;
   }
 }
+
+.about__nav {
+  width: 20rem;
+  margin: 3rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about__nav-link, .about__nav-slash {
+  font-size: 14px;
+  color: #5C596A;
+}
+
+.about__title {
+  font-size: 56px;
+  font-weight: bold;
+}
+
+.about__line {
+  height: 1px;
+  width: 100%;
+  background: #d2d2d2;
+  margin: 4.6rem 0 5rem 0;
+}
+
+.about .mobile-aside {
+  display: none;
+}
+
+.about .mobile-aside__link {
+  height: 55px;
+  font-size: 16px;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 21px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 2px solid #E8E8E8;
+  border-radius: 4px;
+}
+
+.about .mobile-aside__link span {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.about .mobile-aside__link--title {
+  cursor: pointer;
+}
+
+.about__aside {
+  width: 30rem;
+  height: 31.5rem;
+  float: left;
+  padding: 4.2rem 3rem;
+  border: 2px solid #E8E8E8;
+}
+
+.about__aside .aside__item {
+  font-size: 16px;
+  height: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid #707070;
+}
+
+.about__aside .aside__item--this {
+  font-weight: bold;
+  color: #10AE73;
+}
+
+.about__aside .aside__item:hover {
+  color: #10AE73;
+  text-decoration: underline;
+}
+
+.about__aside .aside__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+
+.about__content {
+  margin-left: calc(30rem + 80px);
+}
+
+.about__content h4 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 8rem;
+  margin-top: 5rem;
+}
+
+.about__content h4 span {
+  color: #10AE73;
+}
+
+.about__subtitle {
+  font-size: 34px;
+  font-weight: bold;
+  width: 68rem;
+  margin-bottom: 3rem;
+}
+
+.about__subtitle--green {
+  color: #10AE73;
+}
+
+.about h3 {
+  width: 60rem;
+}
+
+.about__text {
+  font-size: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3rem;
+}
+
+.about__text img {
+  width: 30px;
+  margin-right: 25px;
+}
+
+.about__text--bold {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 1100px) {
+  .about__nav {
+    width: 30rem;
+  }
+  .about__aside {
+    display: none;
+  }
+  .about__content {
+    margin-left: 0;
+  }
+  .about__subtitle {
+    margin-top: 7rem;
+    width: 100%;
+    margin-bottom: 4.5rem;
+  }
+  .about__text {
+    margin-bottom: 6rem;
+  }
+  .about__text--bold {
+    margin-bottom: 8rem;
+  }
+  .about h3 {
+    width: 95%;
+  }
+  .about h4 {
+    margin-bottom: 11rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .about__nav {
+    width: 32rem;
+  }
+  .about__nav-link, .about__nav-slash {
+    font-size: 12px;
+  }
+  .about__title {
+    font-size: 26px;
+  }
+  .about .mobile-aside__link {
+    font-size: 14px;
+  }
+  .about__subtitle {
+    font-size: 18px;
+  }
+  .about__text {
+    font-size: 14px;
+  }
+  .about__text--hide {
+    display: none;
+  }
+  .about h3 {
+    width: 100%;
+  }
+  .about h4 {
+    font-size: 16px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
