--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -36,6 +36,7 @@
             }
             &--title {
                 cursor: pointer;
+                display: none;
             }
         }
     }
@@ -74,6 +75,7 @@
             font-weight: bold;
             margin-bottom: 8rem;
             margin-top: 5rem;
+            line-height: 3rem;
             & span {
                 color: #10AE73;
             }
@@ -84,6 +86,7 @@
         font-weight: bold;
         width: 68rem;
         margin-bottom: 3rem;
+        line-height: 4rem;
         &--green {
             color: #10AE73;
         }
@@ -96,6 +99,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 3rem;
+        line-height: 3rem;
         & img {
             width: 30px;
             margin-right: 25px;
@@ -121,9 +125,11 @@
             margin-top: 7rem;
             width: 100%;
             margin-bottom: 4.5rem;
+            line-height: 4rem;
         }
         &__text {
             margin-bottom: 6rem;
+            line-height: 4rem;
             &--bold {
                 margin-bottom: 8rem;
             }
@@ -133,6 +139,13 @@
         }
         & h4 {
             margin-bottom: 11rem;
+            line-height: 4rem;
+        }
+        .mobile-aside__link {
+            margin-bottom: 1rem;
+            &--title {
+            display: flex;
+            }
         }
     }
 }
@@ -153,9 +166,11 @@
         }
         &__subtitle {
             font-size: 18px;
+            line-height: 4rem;
         }
         &__text {
             font-size: 14px;
+            line-height: 4rem;
             &--hide{
                 display: none;
             }
@@ -165,6 +180,7 @@
         }
         & h4 {
             font-size: 16px;
+            line-height: 4rem;
         }
     }
 }
