refactor:Changed the margins on the mobile version on the contacts page

--- a/styles/components/_contacts.scss
+++ b/styles/components/_contacts.scss
@@ -1,66 +1,73 @@
 .contacts {
-    display: flex;
-    &__left {
-        display: grid;
-        margin-left: 30rem;
-        flex: 1 0 650px;
-        margin-bottom: 15rem;
-        row-gap: 5rem;
-        grid-template-columns: 21rem 1fr;
-        column-gap: 6rem;
-        grid-template-areas: "nav nav"
-        "title title"
-        "location location"
-        "phone email"
-        "button button";
-    }
-    &__nav {
-        width: 19rem;
+
+    &__flex-box {
         display: flex;
-        justify-content: space-between;
-        margin: 3rem 0 6.5rem 0;
-        grid-area: nav;
-        &-link, &-slash {
-            font-size: 14px;
-            color: #5C596A;
+        width: 100;
+    }
+
+    &__header {
+        & nav {
+            margin-bottom: 8rem;
         }
     }
-    &__title {
-        font-size: 56px;
-        font-weight: bold;
-        margin-bottom: 4.2rem;
-        grid-area: title;
+
+    &__body {
+        height: 30rem;
+        margin-top: 8rem;
+        gap: 2rem;
     }
+
+    &__left {
+        border-right: 1px solid rgb(108, 109, 111);
+        flex: 1 0 65rem;
+        min-height: 70rem;
+    }
+
     &__icon {
         margin-right: 2rem;
     }
+
+    &__block {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+
     &__location {
         display: flex;
         flex-direction: column;
-        grid-area: location;
+        margin-bottom: 8rem;
+
         &-title {
             color: #5C596A;
             font-size: 16px;
             font-weight: bold;
             margin-bottom: 1rem;
         }
+
         &-address {
             display: flex;
             align-items: center;
             font-size: 22px;
             font-weight: bold;
+            line-height: 4rem;
         }
     }
+
     &__phone {
         grid-area: phone;
         display: flex;
         flex-direction: column;
+        margin-bottom: 5rem;
+
         &-title {
             font-size: 16px;
             font-weight: bold;
             color: #5C596A;
             margin-bottom: 1rem;
+
         }
+
         &-number {
             display: flex;
             align-items: center;
@@ -68,17 +75,22 @@
             font-weight: bold;
         }
     }
+
     &__email {
-            grid-area: email;
-            display: flex;
-            flex-direction: column;
-            width: 50%;
+        grid-area: email;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5rem;
+        width: 50%;
+
         &-title {
             font-size: 16px;
             font-weight: bold;
             color: #5C596A;
             margin-bottom: 1rem;
+
         }
+
         &-address {
             display: flex;
             align-items: center;
@@ -86,16 +98,14 @@
             font-weight: bold;
         }
     }
+
     & .main-btn {
         grid-area: button;
         font-size: 16px;
     }
-    &__line {
-        height: auto;
-        flex: 0 0 1px;
-        background: gray;
-    }
+
     &__right {
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -106,99 +116,107 @@
 
 @media screen and(max-width:1100px) {
     .contacts {
-        flex-direction: column;
-        padding: 0 3.5rem;
+        &__flex-box {
+            display: flex;
+            width: 100;
+            flex-direction: column;
+
+        }
+
         &__left {
-            margin-left: 0; 
-            margin-bottom: 9rem;
-            grid-template-rows: repeat(5, min-content);
-            grid-template-columns: 30rem 1fr;
-            row-gap: 0;
-            flex: auto;
-            column-gap: 6rem;
+            flex: 1 0 75rem;
+            border-right: none;
+            border-bottom: 1px solid rgb(108, 109, 111);
         }
-        &__nav {
-            width: 26rem;
-            margin: 3rem 0;
-            height: 2rem;
-        }
+
         &__location {
             margin-bottom: 8rem;
+
             &-title {
                 margin-bottom: 2rem;
             }
         }
+
         &__phone {
             margin-bottom: 8rem;
+
             &-title {
                 margin-bottom: 2rem;
             }
         }
+
         &__email {
             &-title {
                 margin-bottom: 2rem;
             }
         }
+
         &__right {
             padding: 10rem 0 14rem 0;
             margin: 0;
+
             & img {
                 width: 100%;
             }
         }
     }
+
 }
 
 @media screen and(max-width:480px) {
     .contacts {
-        padding: 0 2rem;
         &__left {
-            column-gap: 1rem;
+            height: auto;
+            border-right: none;
+            min-height: 0rem;
+            flex: 1 0 65rem;
         }
-        &__nav {
-            width: 30rem;
-            margin: 6rem 0;
-            height: 4rem;
-            &-link, &-slash {
-                font-size: 12px;
-            }
-        }
-        &__title {
-            font-size: 26px;
-        }
+
         &__location {
             margin-bottom: 7rem;
+
             &-address {
                 font-size: 14px;
             }
+
             &-title {
                 font-size: 12px;
             }
         }
+
         &__phone {
             margin-bottom: 0;
+
             &-number {
                 font-size: 14px;
             }
+
             &-title {
                 font-size: 12px;
             }
         }
+
         &__email {
             width: auto;
+
             &-address {
                 font-size: 14px;
             }
+
             &-title {
                 font-size: 12px;
             }
         }
-        & .main-btn, &__line {
+
+        & .main-btn,
+        &__line {
             display: none;
         }
 
         &__right {
             padding: 0;
+            margin-bottom: 5rem;
+
         }
     }
 }
