--- a/styles/main.css
+++ b/styles/main.css
@@ -516,7 +516,7 @@ input {
     height: 40px;
   }
   .icon-amount {
-    right: -30%;
+    right: -25%;
   }
 }
 
@@ -1739,7 +1739,7 @@ input {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
+      grid-template-areas: "first   first   fifth sixth" "second  third   fifth seventh" "fourth  fourth  eighth eighth";
   gap: 2.5rem;
 }
 
@@ -1879,13 +1879,13 @@ input {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
+        grid-template-areas: "first   first" "first   first" "second  third" "second  third" "fourth  fourth" "fourth  fourth";
   }
   .products__right-columns {
     -ms-grid-rows: auto;
     -ms-grid-columns: (1fr)[2];
         grid-template: auto/repeat(2, 1fr);
-        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
+        grid-template-areas: "fifth sixth " "fifth sixth " "fifth seventh" "fifth seventh" "eighth eighth";
     gap: 1rem;
     border-radius: 2rem;
   }
@@ -3136,7 +3136,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 1rem;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .swiper-card__products.list {
@@ -3240,7 +3240,7 @@ input {
   .swiper-card__products {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-        grid-template-areas: 'img description' 'img  description' 'img  footer';
+        grid-template-areas: 'img description' 'img  description' 'img  footer';
     gap: 20px;
   }
   .swiper-card__price {
@@ -3297,7 +3297,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 2rem;
-      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
+      grid-template-areas: "foto description" "foto main" "foto calculation" "foto .. ";
   margin-top: 2rem;
 }
 
@@ -3555,7 +3555,7 @@ input {
 
 @media screen and (max-width: 1100px) {
   .card__main {
-        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
+        grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
   }
   .card__header-title {
     width: 630px;
@@ -6279,7 +6279,7 @@ input {
   display: -ms-grid;
   display: grid;
   gap: 16px;
-      grid-template-areas: 'img' 'description' 'footer';
+      grid-template-areas: 'img' 'description' 'footer';
 }
 
 .favorite-product__img-block {
@@ -6518,7 +6518,7 @@ input {
   .favorite-product {
     border-bottom: 1px solid #d2d2d2;
     padding: 20px 0;
-        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
+        grid-template-areas: 'img description' 'img description' 'img footer' 'img footer';
     -webkit-column-gap: 3rem;
             column-gap: 3rem;
   }
@@ -7438,14 +7438,14 @@ input {
 }
 
 .feedback__phone {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
   grid-area: phone;
 }
 
 .feedback__email {
-  -ms-grid-row: 4;
-  -ms-grid-column: 2;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
   grid-area: email;
 }
 
@@ -7538,7 +7538,7 @@ input {
     padding: 1.5rem;
   }
   .feedback__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .feedback__form input {
@@ -7710,14 +7710,14 @@ input {
 }
 
 .write-review__phone {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
   grid-area: phone;
 }
 
 .write-review__email {
-  -ms-grid-row: 4;
-  -ms-grid-column: 2;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
   grid-area: email;
 }
 
@@ -7809,7 +7809,7 @@ input {
     padding: 1.5rem;
   }
   .write-review__form {
-        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
+        grid-template-areas: "name name name" "phone phone email" "text text text" "politic captcha submit";
     gap: 4rem;
   }
   .write-review__form input {
@@ -8294,60 +8294,43 @@ input {
   }
 }
 
-.contacts {
+.contacts__flex-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100;
+}
+
+.contacts__header nav {
+  margin-bottom: 8rem;
+}
+
+.contacts__body {
+  height: 30rem;
+  margin-top: 8rem;
+  gap: 2rem;
 }
 
 .contacts__left {
-  display: -ms-grid;
-  display: grid;
-  margin-left: 30rem;
+  border-right: 1px solid #6c6d6f;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 650px;
-          flex: 1 0 650px;
-  margin-bottom: 15rem;
-  row-gap: 5rem;
-  -ms-grid-columns: 21rem 1fr;
-      grid-template-columns: 21rem 1fr;
-  -webkit-column-gap: 6rem;
-          column-gap: 6rem;
-      grid-template-areas: "nav nav" "title title" "location location" "phone email" "button button";
-}
-
-.contacts__nav {
-  width: 19rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin: 3rem 0 6.5rem 0;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: nav;
-}
-
-.contacts__nav-link, .contacts__nav-slash {
-  font-size: 14px;
-  color: #5C596A;
-}
-
-.contacts__title {
-  font-size: 56px;
-  font-weight: bold;
-  margin-bottom: 4.2rem;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: title;
+      -ms-flex: 1 0 65rem;
+          flex: 1 0 65rem;
+  min-height: 70rem;
 }
 
 .contacts__icon {
   margin-right: 2rem;
+}
+
+.contacts__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .contacts__location {
@@ -8358,10 +8341,7 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: location;
+  margin-bottom: 8rem;
 }
 
 .contacts__location-title {
@@ -8380,11 +8360,12 @@ input {
           align-items: center;
   font-size: 22px;
   font-weight: bold;
+  line-height: 4rem;
 }
 
 .contacts__phone {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
   grid-area: phone;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8393,6 +8374,7 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-bottom: 5rem;
 }
 
 .contacts__phone-title {
@@ -8414,8 +8396,8 @@ input {
 }
 
 .contacts__email {
-  -ms-grid-row: 4;
-  -ms-grid-column: 2;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
   grid-area: email;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8424,6 +8406,7 @@ input {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-bottom: 5rem;
   width: 50%;
 }
 
@@ -8446,19 +8429,8 @@ input {
 }
 
 .contacts .main-btn {
-  -ms-grid-row: 5;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: button;
   font-size: 16px;
-}
-
-.contacts__line {
-  height: auto;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 1px;
-          flex: 0 0 1px;
-  background: gray;
 }
 
 .contacts__right {
@@ -8477,32 +8449,22 @@ input {
 }
 
 @media screen and (max-width: 1100px) {
-  .contacts {
+  .contacts__flex-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 0 3.5rem;
   }
   .contacts__left {
-    margin-left: 0;
-    margin-bottom: 9rem;
-    -ms-grid-rows: (min-content)[5];
-        grid-template-rows: repeat(5, -webkit-min-content);
-        grid-template-rows: repeat(5, min-content);
-    -ms-grid-columns: 30rem 1fr;
-        grid-template-columns: 30rem 1fr;
-    row-gap: 0;
     -webkit-box-flex: 1;
-        -ms-flex: auto;
-            flex: auto;
-    -webkit-column-gap: 6rem;
-            column-gap: 6rem;
-  }
-  .contacts__nav {
-    width: 26rem;
-    margin: 3rem 0;
-    height: 2rem;
+        -ms-flex: 1 0 75rem;
+            flex: 1 0 75rem;
+    border-right: none;
+    border-bottom: 1px solid #6c6d6f;
   }
   .contacts__location {
     margin-bottom: 8rem;
@@ -8529,23 +8491,13 @@ input {
 }
 
 @media screen and (max-width: 480px) {
-  .contacts {
-    padding: 0 2rem;
-  }
   .contacts__left {
-    -webkit-column-gap: 1rem;
-            column-gap: 1rem;
-  }
-  .contacts__nav {
-    width: 30rem;
-    margin: 6rem 0;
-    height: 4rem;
-  }
-  .contacts__nav-link, .contacts__nav-slash {
-    font-size: 12px;
-  }
-  .contacts__title {
-    font-size: 26px;
+    height: auto;
+    border-right: none;
+    min-height: 0rem;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 65rem;
+            flex: 1 0 65rem;
   }
   .contacts__location {
     margin-bottom: 7rem;
@@ -8579,6 +8531,7 @@ input {
   }
   .contacts__right {
     padding: 0;
+    margin-bottom: 5rem;
   }
 }
 
