--- a/styles/components/_swiper-card-prod.scss
+++ b/styles/components/_swiper-card-prod.scss
@@ -34,6 +34,7 @@
       border: 1px solid rgb(207, 207, 207);
       border-radius: 0.5rem;
       flex-direction: column-reverse;
+      justify-content: center;
     }
   }
 
@@ -47,6 +48,7 @@
       padding: 1rem 0.5rem 0 0.5rem;
       border: 1px solid rgb(207, 207, 207);
       border-radius: 0.5rem;
+      justify-content: center;
     }
   }
 
