--- a/styles/components/_reviews.scss
+++ b/styles/components/_reviews.scss
@@ -39,7 +39,7 @@
     left: 30%;
     display: flex;
     justify-content: space-between;
-    width: 28%;
+    width: 15%;
     text-transform: uppercase;
     align-items: center;
   }
@@ -148,7 +148,6 @@
     &__button {
       position: relative;
       z-index: 100;
-      // flex: 0 1 40%;
       justify-content: center;
     }
 
@@ -164,6 +163,9 @@
       z-index: 100;
       width: 100%;
       line-height: 4rem;
+    }
+    &__button-all {
+      width: 28%;
     }
   }
 }
